--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-    font-size: 16px; /* use rems hereafter */
+    font-size: 16px;
 }
 
 body {
@@ -23,12 +23,6 @@ body {
   padding-right: 1rem;
 }
 
-/*
-.portfolio.internal-grid > div {
-  display: none;
-}
-*/
-
 .cv .internal-content > div {
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -37,8 +31,8 @@ body {
 
 #dp {
     background: grey;
-    height: 8.5em;
-    width: 8.5em;
+    height: 8.5rem;
+    width: 8.5rem;
 }
 
 #dp img {
@@ -121,6 +115,6 @@ ul {
   margin: 0;
 }
 
-a {
+a, a:active {
     text-decoration: none;
 }
