--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* text styling */
+
 html {
     font-size: 16px;
 }
@@ -5,18 +7,122 @@ html {
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, system-ui, sans-serif;
     font-weight: 400;
-    width: 45rem;
+  }
+
+  h1 {
+      font-size: 2.5rem;
+      font-weight: 300;
+      margin-top: 0rem;
+      border-top: 0rem;
+      padding-top: 0rem;
+      margin-bottom: 0rem;
+      border-bottom: 0rem;
+      padding-bottom: 0.9rem;
+  }
+
+  h2 {
+      font-size: 1.25rem;
+      font-weight: 400;
+      margin-top: 1rem;
+      border-top: 0rem;
+      padding-top: 0rem;
+      margin-bottom: 1rem;
+      border-bottom: 0rem;
+      padding-bottom: 0rem;
+  }
+
+  h3 {
+      font-size: 1.125rem;
+      font-weight: 400;
+      margin-top: 0rem;
+      border-top: 0rem;
+      padding-top: 0rem;
+      margin-bottom: 0rem;
+      border-bottom: 0rem;
+      padding-bottom: 0.6rem;
+  }
+
+  h4 {
+      font-size: 1rem;
+      font-weight: 500;
+      margin-top: 0rem;
+      border-top: 0rem;
+      padding-top: 0rem;
+      margin-bottom: 0rem;
+      border-bottom: 0rem;
+      padding-bottom: 0rem;
+  }
+  h5 {
+    font-size: 1rem;
+    font-weight: 400;
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+  }
+
+  p, ul {
+    font-weight: 400;
+    font-size: 0.8rem;
+  }
+
+  a, a:visited, a:-webkit-any-link {
+    text-decoration: none;
+    color: black;
+  }
+
+  a.portfolio-link {
+    font-style: italic;
+    text-decoration: underline;
+    color: black;
+    cursor: pointer;
+  }
+
+/* layout styling */
+
+@media screen and (max-width: 30rem) {
+  body {
+    width: 90%;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  #dp {
+      display: none;
+  }
+}
+
+@media screen and (min-width: 30rem) {
+  body {
+    width: 30rem;
+    display: grid;
+    grid-template-columns: 10rem 20rem;
+  }
+  #dp {
+      height: 10rem;
+      width: 10rem;
+  }
+  #dp img {
+      max-width: 100%;
+      max-height: 100%;
+  }
+}
+
+@media screen and (min-width: 50rem) {
+  body {
+    width: 50rem;
+    grid-template-columns: 10rem 40rem;
+  }
+  .portfolio.internal-grid {
+    display: grid;
+    grid-template-columns: 20rem 20rem;
+  }
+}
+
+body {
     margin-left: auto;
     margin-right: auto;
     margin-top: 1rem;
-    display: grid;
-    grid-template-columns: 9rem 36rem;
+    margin-bottom: 1rem;
 }
 
-.portfolio.internal-grid {
-  display: grid;
-  grid-template-columns: 18rem 18rem;
-}
 .portfolio.internal-grid > div {
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -28,78 +134,7 @@ body {
   margin-bottom: 1rem;
 }
 
-
-#dp {
-    background: grey;
-    height: 8.5rem;
-    width: 8.5rem;
-}
-
-#dp img {
-    max-width: 100%;
-    max-height: 100%;
-}
-
-h1 {
-    font-size: 2.5rem;
-    font-weight: 300;
-    margin-top: 0rem;
-    border-top: 0rem;
-    padding-top: 0rem;
-    margin-bottom: 0rem;
-    border-bottom: 0rem;
-    padding-bottom: 0.9rem;
-}
-
-h2 {
-    font-size: 1.25rem;
-    font-weight: 400;
-    margin-top: 1rem;
-    border-top: 0rem;
-    padding-top: 0rem;
-    margin-bottom: 1rem;
-    border-bottom: 0rem;
-    padding-bottom: 0rem;
-}
-
-h3 {
-    font-size: 1.125rem;
-    font-weight: 400;
-    margin-top: 0rem;
-    border-top: 0rem;
-    padding-top: 0rem;
-    margin-bottom: 0rem;
-    border-bottom: 0rem;
-    padding-bottom: 0.6rem;
-}
-
-h4 {
-    font-size: 1rem;
-    font-weight: 500;
-    margin-top: 0rem;
-    border-top: 0rem;
-    padding-top: 0rem;
-    margin-bottom: 0rem;
-    border-bottom: 0rem;
-    padding-bottom: 0rem;
-}
-h5 {
-  font-size: 1rem;
-  font-weight: 400;
-  margin-top: 0;
-  margin-bottom: 0.5rem;
-}
-
-p {
-  font-weight: 400;
-  font-size: 0.8rem;
-}
-
-div.content h2 {
-    position: relative;
-    left: -1.25rem;
-}
-.cv.internal-content > * {
+.internal-content > * {
   margin-left: 1rem;
 }
 
@@ -107,25 +142,11 @@ div.content h2 {
   display: none;
 }
 
-p {
-    font-size: 1rem;
-}
-
 ul {
   margin: 0;
 }
 
-a, a:visited, a:-webkit-any-link {
-  text-decoration: none;
-  color: black;
-}
-
-a.portfolio-link {
-  font-style: italic;
-  text-decoration: underline;
-  color: black;
-  cursor: pointer;
-}
+/* modal styling */
 
 dialog {
   display: none;
